[package]
name = "asyncsample"
version = "0.1.0"
authors = ["omurakazuaki <omura@enrapt.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rust-crypto = "0.2"
chrono = "0.4"
async-compression = { version = "0.3", features = ["tokio", "gzip"] }
async-recursion = "0.3"
