[package]
name = "diesel_sample"
version = "0.1.0"
authors = ["omurakazuaki <omura@enrapt.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["sqlite", "chrono", "r2d2"] }
libsqlite3-sys = { version = "0.9.1", features = ["bundled"]}
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
