[package]
name = "epoll"
version = "0.1.0"
authors = ["omurakazuaki <omura@enrapt.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "0.7", features = ["os-poll", "net"] }
tracing = "0.1.25"
tracing-subscriber = "0.2.0"
rust-crypto = "0.2"
chrono = "0.4"
flate2 = "1.0"
