[package]
name = "http-server"
version = "0.1.0"
authors = ["omurakazuaki <omura@enrapt.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tracing = "0.1.25"
tracing-subscriber = "0.2.0"
rust-crypto = "0.2"
chrono = "0.4"
flate2 = "1.0"
