[package]
name = "oauth"
version = "0.1.0"
authors = ["omurakazuaki <omura@enrapt.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
actix-web = "3"
actix-session = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tera = "1.0"
reqwest = { version = "0.10", features = ["json"] }
