[package]
name = "oidc"
version = "0.1.0"
authors = ["omurakazuaki <omura@enrapt.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
actix-web = "3"
actix-session = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tera = "1.0"
reqwest = { version = "0.10", features = ["json"] }
rust-crypto = "0.2.36"
url = "2.2.1"
base64 = "0.13.0"
ring = "0.16.20"
untrusted = "0.7.1"
