[package]
name = "oidc"
version = "0.1.0"
authors = ["omurakazuaki <omura@enrapt.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
actix-web = "3"
actix-session = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tera = "1.0"
reqwest = { version = "0.10", features = ["json"] }
rust-crypto = "0.2"
url = "2.2"
base64 = "0.13"
num-bigint = "0.4"
num-traits = "0.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = "0.4"
diesel = { version = "1.4.5", features = ["sqlite", "chrono", "r2d2"] }
